# Cs2-mod

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
config/: config.json
docs/: DESIGN.md  HANDOFF.md  ROADMAP.md  api.md  architecture.md  build.md  contributing.md
loader/: CMakeLists.txt
loader/include/: injector.h  logger.h  steam_launcher.h  updater.h
loader/src/: injector.cpp  main.cpp  steam_launcher.cpp  updater.cpp
mod/: CMakeLists.txt
mod/include/mod/: config.h  core.h  dx11_renderer.h  imgui_impl.h  input_handler.h  logger.h  memory.h  overlay.h  steam_integration.h  utils.h
mod/src/: dll_main.cpp
mod/src/core/: config.cpp  mod.cpp
mod/src/overlay/: input_handler.cpp  overlay.cpp
mod/src/renderer/: dx11_renderer.cpp  imgui_impl.cpp
mod/src/steam/: steam_integration.cpp
mod/src/utils/: logger.cpp  memory.cpp  utils.cpp
